day-9/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-static-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-static-site
  template:
    metadata:
      labels:
        app: nginx-static-site
    spec:
      containers:
      - name: nginx-static-site
        image: harshpatil02/custom-nginx-image:latest
        ports:
        - containerPort: 80
        resources:
          limits:
           cpu: 50m
          requests:
           cpu: 20m
