day-9/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-static-site-service
spec:
  selector:
    app: nginx-static-site
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    nodePort: 30001
  type: NodePort
