day-9/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - minikube.ip
    secretName: tls-secret
  rules:
  - host: minikube.ip
    http:
      paths:
      - path: /main
        pathType: Prefix
        backend:
          service:
            name: nginx-static-site-service
            port:
              number: 8080
  - host: new.minikube
    http:
      paths:
      - path: /other
        pathType: Prefix
        backend:
          service:
            name: nginx-static-site-service
            port:
              number: 8080
